# internal/structs/application.go
@@ -12,10 +12,10 @@ var validate *validator.Validate
 
 type Application struct {
 	gorm.Model
-	FullName          string `json:"full_name" validate:"required"`
-	Phone             string `json:"phone" validate:"required"`
-	RegionID          uint   `json:"region_id" validate:"required,min=1"`
-	ApplicationTypeID uint   `json:"application_type_id" validate:"required,min=1"`
+	FullName        string `json:"full_name" validate:"required"`
+	Phone           string `json:"phone" validate:"required"`
+	City            string `json:"city" validate:"required,min=1"`
+	ApplicationType string `json:"application_type" validate:"required,min=1"`
 }
 
 // Validate — validates the data specified in the field tags
